# Homework-9

./: .env.sample  README.md  main.py  pyproject.toml
src/: decorators.py  description.py  external_api.py  generators.py  masks.py  pandas_csv.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_pandas_csv.py  test_processing.py  test_utils.py  test_widget.py
